# markupy

./: .gitignore  404.html  LICENSE  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
.github/workflows/: main.yml
advanced/: index.html
assets/: extra.css
components/: index.html
django/: index.html
docs/: CNAME  README.md  advanced.md  components.md  django.md  elements.md  flask.md  html2markupy.md  reusability.md  starlette.md  usage.md
docs/assets/: extra.css
elements/: index.html
examples/django/: manage.py
examples/django/markupyapp/: apps.py  urls.py  views.py
examples/django/markupyproject/: asgi.py  settings.py  urls.py  wsgi.py
examples/starlette/: html_response.py
flask/: index.html
html2markupy/: index.html
reusability/: index.html
scripts/: benchmark_big_table.py  docs.sh  fix.sh  performance.py  release.sh  test.sh
search/: search_index.json
src/markupy/: __init__.py  attribute.py  attributes.py  cli.py  element.py  elements.py  exceptions.py  html.py  tag.py  test.py
src/markupy/_private/: attribute.py  cli.py  component.py  element.py  exception.py  fragment.py  html.py  node.py  view.py  (+3 more)
src/tests/: test_attribute_handler.py  test_attributes.py  test_attributes_dict.py  test_attributes_kwargs.py  test_attributes_obj.py  test_attributes_selector.py  test_children.py  test_cli.py  test_component.py  test_django.py  test_element.py  test_flask.py  test_fragment.py  test_integration.py  test_jinja2.py  test_nodes.py  test_starlette.py  test_template.py  test_view.py
starlette/: index.html
usage/: index.html
(+111 files in other folders)
