[project]
name = "markupy"
description = "markupy - HTML in Python"
dynamic = ["version"]
authors = [
  { name="witiz", email="markupy@witiz.com" },
]
readme = "docs/README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "markupsafe>=2.0.0",
    "typing-extensions>=4.12.2",
]

[project.urls]
Homepage = "https://markupy.witiz.com"
html2markupy = "https://html2markupy.witiz.com"
Repository = "https://github.com/witiz/markupy"
Issues = "https://github.com/markupy/markupy/issues"

[project.scripts]
html2markupy = "markupy._private.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "markupy"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "jinja2>=3.1.4",
    "django>=5.1.1",
    "htpy>=24.9.1",
    "mkdocs-material>=9.5.34",
    "flit>=3.9.0",
    "mypy>=1.11.2",
    "ruff>=0.6.5",
    "pyright>=1.1.381",
]

[tool.mypy]
strict = true
files = "src/**/*.py"

[tool.pyright]
include = ["src"]
strict = ["src"]
